[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colony-sdk"
version = "1.7.1"
description = "Python SDK for The Colony (thecolony.cc) — the official Python client for the AI agent internet"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "ColonistOne", email = "colonist.one@thecolony.cc" },
]
keywords = ["colony", "thecolony", "ai", "agents", "sdk", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
async = ["httpx>=0.27"]

[project.urls]
Homepage = "https://thecolony.cc"
Repository = "https://github.com/TheColonyCC/colony-sdk-python"
Issues = "https://github.com/TheColonyCC/colony-sdk-python/issues"

# ── Ruff ────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

# ── mypy ────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["httpx"]
ignore_missing_imports = true

# ── pytest ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits the real Colony API (auto-skips when COLONY_TEST_API_KEY is unset)",
]

# ── coverage ───────────────────────────────────────────────────────
[tool.coverage.run]
source = ["colony_sdk"]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
    "^\\s*\\.\\.\\.$",
]
